--- a/src/app/component/customer-register/customer-register.component.html
+++ b/src/app/component/customer-register/customer-register.component.html
@@ -1,15 +1,15 @@
-<div id="header" class="shadow rounded-0">
+<div id="header" class="shadow rounded-0" style="background-color: #47738C; color: #ffffff;">
   <div class="container">
     <div class="row spacer-3"></div>
     <div class="row align-items-center justify-content-between">
       <div class="col-auto d-none d-sm-block">
-        <img src="../../assets/images/BodegaLucia002.png" class="object-fit-scale" alt="Logo de Bodega Lucia" style="height: 4rem;">
+        <img src="../../assets/images/LogoLupitaNavbar.png" class="object-fit-scale" alt="Logo Abarrotes Lupita" style="height: 4rem;">
       </div>
       <div class="col col-auto">
         <div class="display-6 fw-medium">Registrar cliente</div>
       </div>
       <div class="col col-auto">
-        <button type="menu" class="btn btn-outline-secondary" [routerLink]="['/caja']"><i class="fa-solid fa-home" style="width: 5rem;"></i></button>
+        <button type="menu" class="btn btn-outline-light" [routerLink]="['/caja']"><i class="fa-solid fa-home" style="width: 5rem;"></i></button>
       </div>
     </div>
     <div class="row spacer-3"></div>
@@ -47,8 +47,13 @@
             </div>
           </div>
           <div class="col-12">
-            <button type="submit" class="btn btn-warning w-100" (click)="register_customer()">Registrar</button>
-          </div>  
+            <button type="submit" class="btn btn-warning w-100" (click)="register_customer()"
+              onmouseover="this.style.backgroundColor='#7abbbd'; this.style.borderColor='#7abbbd'; this.style.color='#112244';"
+              onmouseout="this.style.backgroundColor='#94E0E4'; this.style.borderColor='#94E0E4'; this.style.color='#112244';"
+              style="background-color: #94E0E4; border-color: #94E0E4; color: #112244;">
+              Registrar
+            </button>
+          </div>
         </div>
       </div>
     </div>
