--- a/src/app/component/operations-list/operations-list.component.html
+++ b/src/app/component/operations-list/operations-list.component.html
@@ -1,15 +1,15 @@
-<div id="header" class="shadow rounded-0">
+<div id="header" class="shadow rounded-0" style="background-color: #47738C; color: #ffffff;">
   <div class="container">
     <div class="row spacer-3"></div>
     <div class="row align-items-center justify-content-between">
       <div class="col-auto d-none d-sm-block">
-        <img src="../../assets/images/BodegaLucia002.png" class="object-fit-scale" alt="Logo de Bodega Lucia" style="height: 4rem;">
+        <img src="../../assets/images/LogoLupitaNavbar.png" class="object-fit-scale" alt="Logo Abarrotes Lupita" style="height: 4rem;">
       </div>
       <div class="col col-auto">
         <div class="display-6 fw-medium">Lista de operaciones</div>
       </div>
       <div class="col col-auto">
-        <button type="menu" class="btn btn-outline-secondary" [routerLink]="['/configuracion']"><i class="fa-solid fa-gear" style="width: 5rem;"></i></button>
+        <button type="menu" class="btn btn-outline-light" [routerLink]="['/configuracion']"><i class="fa-solid fa-gear" style="width: 5rem;"></i></button>
       </div>
     </div>
     <div class="row spacer-3"></div>
@@ -72,7 +72,7 @@
               </div>
             </div>
 
-            
+
             <!-- <div class="col-3">
               <div class="form-floating input-group">
                 <input type="number" class="form-control" aria-label="siguiente pago total" [value]="" readonly>
@@ -80,7 +80,7 @@
                 <span class="input-group-text">S/.</span>
               </div>
             </div>
-            
+
             <div class="col-8"></div> -->
             <div class="col-12"></div>
 
@@ -107,7 +107,7 @@
           </div>
         </div>
 
-        
+
       </div>
 
       <div class="spacer-3"></div>
@@ -115,7 +115,7 @@
       <!-- Tabla de Compras -->
       <div *ngIf="this.selected_option == 1 && this.purchases.length != 0" class="col-12" style="max-height: 50vh; overflow-y: auto;">
         <table class="table text-center">
-          <thead class="table-warning align-middle">
+          <thead class="table-info align-middle">
             <tr>
               <th scope="col" class="text-uppercase col-1">ID</th>
               <th scope="col" class="text-uppercase col-1">Fecha</th>
@@ -146,7 +146,7 @@
       <!-- Tabla de Pagos -->
       <div *ngIf="selected_option == 2 && this.payments.length != 0" class="col-12" style="max-height: 50vh; overflow-y: auto;">
         <table class="table text-center">
-          <thead class="table-warning align-middle">
+          <thead class="table-info align-middle">
             <tr>
               <th scope="col" class="text-uppercase col-1">ID</th>
               <th scope="col" class="text-uppercase col-2">Fecha</th>
