--- a/src/app/component/configuration/configuration.component.html
+++ b/src/app/component/configuration/configuration.component.html
@@ -91,6 +91,9 @@
             Guardar cambios
           </button>
         </div>
+        <div *ngIf="success_message" class="alert alert-success mt-4">   <!--ADD-->
+          Cambios Guardados
+        </div>
       </div>
     </div>
   </div>
