--- a/src/app/component/operations-list/operations-list.component.html
+++ b/src/app/component/operations-list/operations-list.component.html
@@ -38,7 +38,7 @@
             <div class="col-3">
               <div class="form-floating">
                 <input type="date" class="form-control" aria-label="fecha de registro de cliente" [value]="this.customer.payment_date | date: 'yyyy-MM-dd'" readonly>
-                <label>Fechad de registro</label>
+                <label>Fecha de registro</label>
               </div>
             </div>
 
