--- a/src/app/component/cash-register/cash-register.component.html
+++ b/src/app/component/cash-register/cash-register.component.html
@@ -116,6 +116,14 @@
               </div>
             </div>
 
+            <!-- success and error messages -->
+            <div *ngIf="success_message" class="alert alert-success" role="alert">
+              {{ success_message }}
+            </div>
+            <div *ngIf="error_message" class="alert alert-danger" role="alert">
+              {{ error_message }}
+            </div>
+
             <!-- Registrar pago -->
             <div class="col-12" style="max-height: 60vh; overflow-y: auto;" [ngClass]="{'d-none': value_selection != 2}">
               <table class="table table-bordered border rounded-3 text-center align-middle">
