--- a/src/app/component/operations-list/operations-list.component.html
+++ b/src/app/component/operations-list/operations-list.component.html
@@ -9,7 +9,7 @@
         <div class="display-6 fw-medium">Lista de operaciones</div>
       </div>
       <div class="col col-auto">
-        <button type="menu" class="btn btn-outline-light" [routerLink]="['/configuracion']"><i class="fa-solid fa-gear" style="width: 5rem;"></i></button>
+        <button type="menu" class="btn btn-outline-light" [routerLink]="['/caja']"><i class="fa-solid fa-home" style="width: 5rem;"></i></button>
       </div>
     </div>
     <div class="row spacer-3"></div>
