--- a/src/app/component/customer-register/customer-register.component.html
+++ b/src/app/component/customer-register/customer-register.component.html
@@ -54,12 +54,15 @@
               Registrar
             </button>
           </div>
-          <div *ngIf="success_message" class="alert alert-success mt-4">
-            Cliente Registrado Correctamente
+
+          <!-- success and error messages -->
+          <div *ngIf="success_message" class="alert alert-success" role="alert">
+            {{ success_message }}
           </div>
-          <div *ngIf="error_message" class="alert alert-danger mt-4">
-            Digite sus Datos
+          <div *ngIf="error_message" class="alert alert-danger" role="alert">
+            {{ error_message }}
           </div>
+
         </div>
       </div>
     </div>
