--- a/src/app/component/configuration/configuration.component.html
+++ b/src/app/component/configuration/configuration.component.html
@@ -8,8 +8,9 @@
         <div class="col col-auto">
           <div class="display-6 fw-medium">Configuración</div>
         </div>
-        <div class="col col-auto">
+        <div class="col col-auto d-flex gap-2">
           <button type="menu" class="btn btn-outline-light" [routerLink]="['/caja']"><i class="fa-solid fa-home" style="width: 5rem;"></i></button>
+          <button type="menu" class="btn btn-light" [routerLink]="['/ingresar']"><i class="fa-solid fa-sign-out" style="width: 5rem;"></i></button>
         </div>
       </div>
       <div class="row spacer-3"></div>
