--- a/src/app/component/customer-register/customer-register.component.html
+++ b/src/app/component/customer-register/customer-register.component.html
@@ -43,7 +43,7 @@
           <div class="col-12">
             <div class="form-floating">
               <input type="date" class="form-control" placeholder="Fecha de pago" aria-label="fecha de pago" [min]="min_date | date: 'yyyy-MM-dd'" [max]="max_date | date: 'yyyy-MM-dd'" [(ngModel)]="new_customer.payment_date">
-              <label>Fecha de pago</label>
+              <label>Fecha de registro</label>
             </div>
           </div>
           <div class="col-12">
